# vocaptcha-v2

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
experimental/: .testing.py
service/: _testing.py  main.py  staging.py  vocaptcha.yaml
service/plugins/: add_numbers.json  add_numbers.py  nato_alpha.json  nato_alpha.py  sentences.json  sentences.py
service/vocaptcha/: cache.py  plugins.py  server.py
tests/: curl.sh  test_main.py
tests/cases/: generate_add_two_numbers.json  generate_nato_passphrase.json  generate_sentences.json  verify_add_two_numbers.json  verify_nato_passphrase.json  verify_nato_passphrase_loose.json  verify_sentences_loose.json  verify_sentences_strict.json
